# LoafRTC

./: .gitignore  README.md  ecosystem.config.js  nginx.conf  package-lock.json  package.json  turnserver.conf
.github/workflows/: build-windows.yml
docs/: deploy.md  index.html  styles.css
frontend/: app.js  index.html  protocol.mjs  renderer.js
frontend/test/: protocol.test.mjs
loafhost/: electron-builder.yml  package.json
loafhost/input-bridge/: go.mod  main.go
loafhost/native/: Cargo.toml
loafhost/native/src/: capture.rs  encode.rs  lib.rs  pipeline.rs
loafhost/scripts/: build-native.sh
loafhost/src/: main.js  preload.js
loafhost/src/renderer/: app.js  index.html  styles.css
server/: .env.example  package.json  server.js  turn.js
server/test/: signaling.test.js
