[package]
name = "loafhost-native"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
crossbeam-channel = "0.5.14"
napi = { version = "2.16.13", default-features = false, features = ["napi8"] }
napi-derive = "2.16.13"
once_cell = "1.20.2"
parking_lot = "0.12.3"

[build-dependencies]
napi-build = "2.1.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
